feat: 3-1 실행 결과 캡처 업로드(컴파일에러) 및 원인 분석

--- a/lab3/resource/3-3_1_분석결과.md
+++ b/lab3/resource/3-3_1_분석결과.md
@@ -15,4 +15,5 @@
 - 이벤트가 발생하면 해당 이벤트를 처리한다.
 - 여기서는 클라이언트의 연결 요청이 오면 accept를 호출하여 클라이언트와 연결을 맺고, 데이터 수신 또는 연결 종료 이벤트를 처리한다.
 
-
+# Mac OS에서 epoll 사용 시 컴파일 에러 발생
+`epoll_server.c`를 컴파일할 때 Mac OS를 사용하면 오류가 발생한다. 그 이유는, Mac OS에서는 `epoll`을 지원하지 않으며, `epoll`과 유사하게 사용할 수 있는 것으로 `kqueue`를 사용할 수 있다.  `kqueue`는 `epoll`과 유사한 기능을 제공하지만 macOS와 같은 BSD 기반 시스템용으로 설계되었다.
